# networking-6wind

./: .coveragerc  .gitreview  CONTRIBUTING.rst  HACKING.rst  Makefile  README.md  README.rst  fp-vdev-remote  openstack-common.conf  post_install.sh  post_remove.sh  requirements.txt  rpm_deps.txt  setup.cfg  test-requirements.txt  tox.ini
devstack/: README.rst  plugin.sh  settings
devstack/libs/: fast-path
doc/source/: conf.py  index.rst  installation.rst  usage.rst
etc/nova/rootwrap.d/: 6wind.filters
fp_vdev_remote/: __init__.py  vdev_remote.py
networking_6wind/: __init__.py  _i18n.py
networking_6wind/agent/: fp_agent.py  server.py
networking_6wind/common/: config.py  constants.py  utils.py
networking_6wind/ml2_drivers/: mech_ovs_fp.py
networking_6wind/ml2_drivers/linuxbridge/agent/: lb_fp_neutron_agent.py
networking_6wind/ml2_drivers/linuxbridge/mech_driver/: mech_lb_fp.py
networking_6wind/ml2_drivers/openvswitch/agent/: main.py  ovs_fp_neutron_agent.py
networking_6wind/ml2_drivers/openvswitch/agent/ovs_ofctl/: main.py
networking_6wind/ml2_drivers/openvswitch/eventlet/: ovs_fp_neutron_agent.py
networking_6wind/ml2_drivers/openvswitch/mech_driver/: mech_ovs_fp.py
networking_6wind/monkey_patch/: vif.py
networking_6wind/plug_scripts/: utils.py  vhostuser.py  vif_ovs_fp_plug.py
networking_6wind/rpc_server/: rpc_server.py
networking_6wind/tests/: test_networking_6wind.py
networking_6wind/tests/unit/ml2_drivers/: _test_mech_agent.py  test_mech_ovs_fp.py
networking_6wind/tests/unit/ml2_drivers/linuxbridge/mech_driver/: test_mech_lb_fp.py
networking_6wind/tests/unit/ml2_drivers/openvswitch/mech_driver/: test_mech_ovs_fp.py
scripts/: get_vcpu_pin_set.py
usr/share/neutron/rootwrap/: networking_6wind.filters
