[metadata]
name = networking-6wind
summary = ML2 Mechanism Drivers for 6WIND DPDK fast path. It allows to keep Linux scenarios: OVS, Bridge, iptables (NAT + ACL), netns that are offloaded by the fast path.
description-file =
    README.rst
author = 6WIND
author-email = support@6wind.com
home-page = https://github.com/openstack/networking-6wind
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    networking_6wind
data_files =
    /usr/share/neutron/rootwrap =
        usr/share/neutron/rootwrap/networking_6wind.filters

[global]
setup-hooks =
    pbr.hooks.setup_hook

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = networking_6wind/locale
domain = networking-6wind

[update_catalog]
domain = networking-6wind
output_dir = networking_6wind/locale
input_file = networking_6wind/locale/networking-6wind.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = networking_6wind/locale/networking-6wind.pot

[entry_points]
neutron.ml2.mechanism_drivers =
    ovs-fp = networking_6wind.ml2_drivers.openvswitch.mech_driver.mech_ovs_fp:OVSFPMechanismDriver
    lb-fp = networking_6wind.ml2_drivers.linuxbridge.mech_driver.mech_lb_fp:LBFPMechanismDriver
console_scripts =
    neutron-fastpath-agent = networking_6wind.agent.fp_agent:main
